Add namespaces API
